--- a/report.qmd
+++ b/report.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Optimal Dose for mHealth Interventions"
 author: "Yongjun Lee"
-format: pdf
+format: html
 editor: visual
 header-includes:
   - \usepackage{amsmath}
