GITHUB_WORKSPACE directory edit

--- a/presentation.qmd
+++ b/presentation.qmd
@@ -73,7 +73,7 @@ I_0t <- apply(a[, 1:decision, drop=FALSE], 1, function(x) all(x == rep(0, decisi
 ```{r}
 source("main.R")
 filename <- "seventh_setting_n50_m1000_days10_t5_p0.5_beta20_dose1.rds"
-dfs <- readRDS(paste("simulated_data",filename, sep = "/"))
+dfs <- readRDS(paste("GITHUB_WORKSPACE/simulated_data",filename, sep = "/"))
 
 m <- length(dfs)
 ee.6.4 <- matrix(nrow = m, ncol = 3)
@@ -165,7 +165,7 @@ main.parallel <-function(dfs, m=100) {
 
 ```{r}
 filename <- "seventh_setting_n50_m1000_days10_t5_p0.5_beta20_dose1.rds"
-dfs <- readRDS(paste("simulated_data",filename, sep = "/"))
+dfs <- readRDS(paste("GITHUB_WORKSPACE/simulated_data",filename, sep = "/"))
 timestart <- Sys.time()
 m=100
 ee.6.4 <- main.parallel(dfs, m)
@@ -175,7 +175,7 @@ means <- colMeans(ee.6.4)
 rslt1 <- c(50, 10, m, 20, means[1], sd(ee.6.4[,1]), 10, means[2], sd(ee.6.4[,2]), 5, means[3], sd(ee.6.4[,3]), run.1)
 
 filename <- "seventh_setting_n100_m1000_days20_t5_p0.5_beta20_dose1.rds"
-dfs <- readRDS(paste("simulated_data",filename, sep = "/"))
+dfs <- readRDS(paste("GITHUB_WORKSPACE/simulated_data",filename, sep = "/"))
 m=100
 timestart2 <- Sys.time()
 ee.6.4 <- main.parallel(dfs, m)
@@ -185,7 +185,7 @@ means <- colMeans(ee.6.4)
 rslt2 <- c(100, 20, m, 20, means[1], sd(ee.6.4[,1]), 10, means[2], sd(ee.6.4[,2]), 5, means[3], sd(ee.6.4[,3]), run.2)
 
 filename <- "seventh_setting_n100_m1000_days20_t5_p0.5_beta20_dose1.rds"
-dfs <- readRDS(paste("simulated_data",filename, sep = "/"))
+dfs <- readRDS(paste("GITHUB_WORKSPACE/simulated_data",filename, sep = "/"))
 m=200
 timestart3 <- Sys.time()
 ee.6.4 <- main.parallel(dfs, m)
