--- a/vignettes/final_report.Rmd
+++ b/vignettes/final_report.Rmd
@@ -19,14 +19,61 @@ library(mrt.dose)
 ```
 
 # Simulate some data
-```{r}
-df.corr <- simMhealth(m=100, n=37, time=5, days=42,
-                      eta=1, rho=0.5,
-                      theta1=1, theta2=0.8,
-                      beta10=0.5, beta11=0, beta12=0.2,
-                      p=0.5)
-debugonce(get.sim.rslts)
-rslt <- get.sim.rslts(m=100, dfs=df.corr, dose=1, print_progress=TRUE)
 
+Most simple case
+```{r}
+m=100; n=c(100,200,300); time=5; days=6; eta=c(0,0,0,0); rho=0; 
+theta1=c(0,0,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
+
+rslt <- matrix(NA, nrow=length(N), ncol=3)
+for (i in 1:3) {
+df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+rslt[i,] <- c(n[i], get.sim.rslts2(m=100, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
+                                   dose, p,print_progress=FALSE))
+}
+rslt
 ```
 
+
+Misspecified baseline, no time-varying covariate
+```{r}
+m=100; N=c(100,200,300); time=5; days=6; eta=c(4,3,2,1); rho=0; 
+theta1=c(0,0,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
+
+rslt2 <- matrix(NA, nrow=length(N), ncol=3)
+for (i in 1:3) {
+df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+rslt2[i,] <- c(n[i], get.sim.rslts2(m=100, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
+                                    dose, p,baseline=c("H1", "H2"), print_progress=FALSE))
+}
+rslt2
+```
+
+Misspecified baseline, correctly specified time-varying covariate
+```{r}
+m=100; n=c(100,200,300); time=5; days=6; eta=c(4,3,2,1); rho=0; 
+theta1=c(3,2,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
+
+rslt3 <- matrix(NA, nrow=length(N), ncol=3)
+for (i in 1:3) {
+df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+rslt3[i,] <- c(n[i], get.sim.rslts2(m=100, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
+                                    dose, p, baseline=c("H1", "H2"), timevar=c("S1", "S2"),
+                                    print_progress=FALSE))
+}
+rslt3
+```
+
+Misspecified baseline, misspecified time-varying covariate
+```{r}
+m=100; N=c(100,200,300); time=5; days=6; eta=c(1,2,3,4); rho=0; 
+theta1=c(3,2,1); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
+
+rslt4 <- matrix(NA, nrow=length(N), ncol=3)
+for (i in 1:3) {
+df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+rslt4[i,] <- c(n[i], get.sim.rslts2(m=100, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
+                                    dose=1, p=0.5,baseline=c("H1", "H2"), timevar=c("S1", "S2"),
+                                    b.prime="H1",t.prime="S1",print_progress=FALSE))
+}
+```
