--- a/vignettes/final_report.Rmd
+++ b/vignettes/final_report.Rmd
@@ -21,6 +21,7 @@ library(mrt.dose)
 # Simulate some data
 
 Most simple case
+
 ```{r}
 m=100; n=c(100,200,300); time=5; days=6; eta=c(0,0,0,0); rho=0; 
 theta1=c(0,0,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
@@ -34,8 +35,8 @@ rslt[i,] <- c(n[i], get.sim.rslts2(m=100, dfs=df.corr, id="ID", day="DAY", slot=
 rslt
 ```
 
-
 Misspecified baseline, no time-varying covariate
+
 ```{r}
 m=100; N=c(100,200,300); time=5; days=6; eta=c(4,3,2,1); rho=0; 
 theta1=c(0,0,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
@@ -50,6 +51,7 @@ rslt2
 ```
 
 Misspecified baseline, correctly specified time-varying covariate
+
 ```{r}
 m=100; n=c(100,200,300); time=5; days=6; eta=c(4,3,2,1); rho=0; 
 theta1=c(3,2,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
@@ -65,6 +67,7 @@ rslt3
 ```
 
 Misspecified baseline, misspecified time-varying covariate
+
 ```{r}
 m=100; N=c(100,200,300); time=5; days=6; eta=c(1,2,3,4); rho=0; 
 theta1=c(3,2,1); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
@@ -74,6 +77,7 @@ for (i in 1:3) {
 df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
 rslt4[i,] <- c(n[i], get.sim.rslts2(m=100, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
                                     dose=1, p=0.5,baseline=c("H1", "H2"), timevar=c("S1", "S2"),
-                                    b.prime="H1",t.prime="S1",print_progress=FALSE))
+                                    print_progress=FALSE))
 }
+rslt4
 ```
