--- a/vignettes/final_report.Rmd
+++ b/vignettes/final_report.Rmd
@@ -6,11 +6,11 @@ vignette: >
  %\VignetteEngine{knitr::rmarkdown}
  %\VignetteEncoding{UTF-8}
 ---
-
-```{r, include = FALSE}
+ 
+```{r knit-setup, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
+collapse = TRUE,
+comment = "#>"
 )
 ```
 
@@ -22,64 +22,63 @@ library(mrt.dose)
 
 Most simple case
 
-```{r}
-m=10; n=c(100,200,300); time=5; days=6; eta=c(0,0,0,0); rho=0; 
+```{r sim}
+m=5; n=c(5,10,15); time=5; days=6; eta=c(0,0,0,0); rho=0; 
 theta1=c(0,0,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
 
 rslt <- matrix(NA, nrow=length(n), ncol=3)
 for (i in 1:3) {
-df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
-rslt[i,] <- c(n[i], get.sim.rslts2(m, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
-                                   dose, p,print_progress=FALSE))
+  df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+  rslt[i,] <- c(n[i], get.sim.rslts2(m, dfs=df.corr, id="ID", day="DAY", slot="SLOT", p, dose=dose, y="Y", trt="A",
+                                     print_progress=FALSE))
 }
 rslt
 ```
 
 Misspecified baseline, no time-varying covariate
 
-```{r}
+```{r sim-2}
 m=10; n=c(100,200,300); time=5; days=6; eta=c(4,3,2,1); rho=0; 
 theta1=c(0,0,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
 
 rslt2 <- matrix(NA, nrow=length(n), ncol=3)
 for (i in 1:3) {
-df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
-rslt2[i,] <- c(n[i], get.sim.rslts2(m, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
-                                    dose, p,baseline=c("H1", "H2"), print_progress=FALSE))
+  df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+  rslt2[i,] <- c(n[i], get.sim.rslts2(m, dfs=df.corr, id="ID", day="DAY", slot="SLOT", p, dose=dose, y="Y", trt="A",
+                                      baseline=c("H1", "H2"), print_progress=FALSE))
 }
 rslt2
 ```
 
 Misspecified baseline, correctly specified time-varying covariate
 
-```{r}
+```{r sim-3}
 m=10; n=c(100,200,300); time=5; days=6; eta=c(4,3,2,1); rho=0; 
-theta1=c(3,2,0); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
+theta1=c(3,2,1); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
 
 rslt3 <- matrix(NA, nrow=length(n), ncol=3)
 for (i in 1:3) {
-df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
-rslt3[i,] <- c(n[i], get.sim.rslts2(m, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
-                                    dose, p, baseline=c("H1", "H2"), timevar=c("S1", "S2"),
-                                    print_progress=FALSE))
+  df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+  rslt3[i,] <- c(n[i], get.sim.rslts2(m, dfs=df.corr, id="ID", day="DAY", slot="SLOT", p, 
+                                      dose=dose, y="Y", trt="A", 
+                                      baseline=c("H1", "H2"), timevar=c("S1", "S2"), print_progress=FALSE))
 }
 rslt3
 ```
 
 Misspecified baseline, misspecified time-varying covariate
 
-```{r}
-m=10; n=c(100,200,300); time=5; days=6; eta=c(1,2,3,4); rho=0; 
+```{r sim-4}
+m=5; n=5; time=5; days=5; eta=c(1,2,3,4); rho=0;
 theta1=c(3,2,1); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
 
-rslt4 <- matrix(NA, nrow=length(n), ncol=3)
-for (i in 1:3) {
-df.corr <- simMhealth(m, n[i], time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
-rslt4[i,] <- c(n[i], get.sim.rslts2(m, dfs=df.corr, id="ID", day="DAY", slot="SLOT", y="Y", trt="A",
-                                    dose=1, p=0.5,baseline=c("H1", "H2"), timevar=c("S1", "S2"),
-                                    print_progress=FALSE))
-}
-rslt4
+
+df.corr <- simMhealth(m, n, time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+mHealthDose(df.corr[[1]], id="ID", day="DAY", slot="SLOT", p, 
+            dose=dose, y="Y", trt="A",
+            baseline=c("H1", "H2"), timevar=c("S1", "S2"), 
+            b.prime=NULL, t.prime=NULL,
+            se = TRUE, boot = m, cores = 2, print_progress=FALSE)
 ```
 
 
