--- a/inst/main/simulation_results.Rmd
+++ b/inst/main/simulation_results.Rmd
@@ -63,3 +63,17 @@ for (i in 1:1) {
 }
 rslt3
 ```
+
+Similar to HeartSteps. Replicating Previous results
+```{r}
+m=100; n=100; time=5; days=42; eta=c(1,20,10,30); rho=0.5;
+theta1=c(0,0,0); theta2=0; beta10=20; beta11=c(10, 5, 0); beta12=0; p=0.5; dose=1
+dfs <- simMhealth(m, n, time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+fits <- mHealthDoses(dfs, id="ID", day="DAY", slot="SLOT", p, 
+                   doses=c(1,2,3,4,5), y="Y", trt="A",
+                   baseline=c("H1","H2"), 
+                   b.prime=c("H1", "H2"),
+                  boot = m, cores = 2, sim=TRUE, print_progress=FALSE)
+summary(fits)
+```
+
