--- a/vignettes/final_report.Rmd
+++ b/vignettes/final_report.Rmd
@@ -6,7 +6,7 @@ vignette: >
  %\VignetteEngine{knitr::rmarkdown}
  %\VignetteEncoding{UTF-8}
 ---
-
+ 
 ```{r knit-setup, include = FALSE}
 knitr::opts_chunk$set(
 collapse = TRUE,
@@ -14,41 +14,182 @@ comment = "#>"
 )
 ```
 
+# Introduction
+
+The method implemented in this package is motivated by HeartSteps study by Klasnja et al. (2019). This study is a micro-randomized trial (MRT) that aims to investigate the effect of a mobile health intervention on daily step count for sedentary workers. The intervention is delivered through a mobile app that sends notifications to participants at five pre-specified decision points during the day. The notifications contain suggestions for physical activity. While trying to find the best treatment regime, also known as "just-in-time-adaptive-intervention" (JITAI), we were interested in the optimal frequency (dose) of the intervention (i.e. mobile device notification).
+
+This package contains functions to simulate data from the HeartSteps study under various settings and to estimate the optimal dose of the intervention. Instead of relying on the total number of interventions for a given day to infer the effectiveness of that dosage, our model utilizes the the outcome recorded throughout the day to infer upon the effectiveness of multiple dosage from single day. The user can specify the working model for the outcome to reduce variance in the model. This working model can contain both baseline and time-varying covariates and is robust to misspecification. The treatment effect can also depend on baseline or time-varying covariates which are specified separately.
+
+# Data Simulation
+
+The function `simMhealth` simulates data from the HeartSteps study. Step count for each of the 5 slots are generated using the following model:
+
+$$
+Y_{t+1} = \eta H + \theta_1 S_t + \theta_2 A_{t-1} + (\beta_{10} + \beta_{11}H' + \beta_{12}S_t')A_t +\epsilon
+$$ 
+
+$$
+\begin{equation}
+\begin{aligned}
+H &= (\bar{h}_1, \bar{h}_2, \bar{h}_3, \bar{h}_{int}),\\
+h_1 &\sim Binomial(0.5), \\
+h_2&\sim Normal(0,1), \\
+h_3&= h_2^2, \\
+h_{int} &= \bar{1}_n,\\
+\eta&=(\eta_1, \eta_2, \eta_3, \eta_4), \\\\
+A_t &\sim Binomial(p),\\
+\end{aligned}
+\qquad\qquad
+\begin{aligned}
+S &=(\bar{s}_1, \bar{s}_2, \bar{s}_3)\\
+s_1 &\sim Binomial(0.5), \\
+s_2&\sim Normal(0,1), \\
+s_3&= s_2^2, \\
+\theta_1&=(\theta_{11}, \theta_{12}, \theta_{13})\\\\\\
+\epsilon&\sim Normal(0,\Sigma)
+\end{aligned}
+\end{equation}
+$$
+
+-   $H$: Baseline covariate
+-   $S$: Time-varying covariate
+-   $A_t$: Treatment at time $t$
+-   $\theta_2$: Treatment effect of previous time slot on current time slot
+-   $\beta=(\beta_{10}, \beta_{11}, \beta_{12}$: Treatment effect
+-   $H',\: S'$: Subset of baseline and time-varying covariates for the interaction with treatment effect
+-   $\Sigma$: Correlation matrix with off diagonal elements $\rho^{\text{dist(i,j)}}$ where $\text{dist(i,j)}$ is the distance between time slots $i$ and $j$ for one participant.
+
+The function `simMhealth` returns a list containing the simulated data frame and the true treatment effect. Each data frame contains the following columns:
+
+-   `ID`: Participant ID
+-   `OBS`: Observation number for each participant
+-   `DAY`: Day of the study
+-   `SLOT`: Time slot
+-   `Y`: Step count
+-   `H1`, `H2`, `S1`, `S2`: Baseline and time-varying covariates
+-   `A`: Treatment
 
 ```{r}
 library(mrt.dose)
-m=5; n=30; time=5; days=5; eta=c(1,2,3,4); rho=0;
-theta1=c(3,2,1); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
-
-df.corr <- simMhealth(m, n, time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
-df.corr[[1]]
+m=5; n=30; time=2; days=2; eta=c(1,2,3,4); rho=0; theta1=c(3,2,1); theta2=0; beta10=1; beta11=0; beta12=0; p=0.5; dose=1
+dfs <- simMhealth(m, n, time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+head(round(dfs[[1]],3),8)
 ```
 
+# Model Fitting
+
+`mHealthDose` function fits the Causal Excursion Effects Model. The estimand of interest is given by,
+$$
+E[Y(dose=d)-Y(dose=0)\mid S] = S^{\top}\beta
+$$
+
+From the above equation, we can derive the following estimating equation. The estimates are obtained by setting this equation to zero and solving it. 
+$$
+\begin{equation}
+\tilde{u}=\sum_{i=1}^n\sum_{t=1}^{T}\sum_{k=1}^{K} \frac{1}{{k \choose d}} \sum_{\bar{a}_{k}\in D}
+\left(
+\frac{I(\bar{A}_{t,k,i}=\bar{a}_{k})}{P(\bar{A}_{t,k,i}=\bar{a}_{t,k})} 
+\left( Y_{t,k,i}-m_{1,t,k} \right) -
+\frac{I(\bar{A}_{t,k,t}=\bar{0}_{k})}{P(\bar{A}_{t,k,i}=\bar{0}_{k})} 
+\left( Y_{t,k}-m_{0,t,k} \right) 
++ m_{1,t,k} - m_{0,t,k}
+- \frac{1}{K} S^{\top}\beta
+\right)
+\nu(S) 
+\end{equation}
+$$
+
+-   $T$: Total number of randomization days throughout the study. (in HeartSteps, $T=42$)
+-   $K$: Total number of decision points per day. (in Heartsteps, $K=5$).
+-   $d$: Dose of interest.
+-   $D$: set of regimes associated with dose, d. (e.g. $(1,0,1,0,0)$ for $dose=2$)
+-   $\bar{a}_k$: one of the regimes for dose, $d$, up to decision point, $k$. (e.g. $\bar{a}_3=(1,0,1)$)
+-   $E$: Expectation is taken over all subjects, $i$.
+-   $A_{t,k,i}$: Treatment assignment on day $t$, at decision point $k$, for the $i$-th person.
+-   $\bar{A_{t,k,i}}=\{A_{t,1,i},\ldots,A_{t,k,i}\}$: the first to $k^{th}$ treatment assignment for day $t$.
+-   $Y_{t,k}$: Total step count between decision point $k$ and $k+1$ for day $t$.
+-   $m=E\left[Y\middle| H\right]$: Working linear regression model where $H$ contains adjustment covariates. This working model depends on both t and k
+-   $m_1,\ m_0$: predicted value from the regression model. Predicted at $A_{t,k}=a_k$ and $A_{t,k}=0$, respectively
+-   $\nu\left(\cdot\right)$: Some continuous function
+-   $S$: covariates of interest.
+
+The key aspect of this estimating equation lies in $\sum_{\bar{a}_k \in D}$. Breaking down the estimating equation this way allows us to utilize the outcome recorded on, say, total dose of 4, to infer upon the effectiveness of dose 1,2,3, and 4. 
+
+## Fit a single dose
+In the function call, `baseline` and `timevar` together defines the working model $m$ and `b.prime` and `t.prime` are subset of `baseline` and `timevar` respectively, and corresponds to $S$ in the estimating equation.
 ```{r}
-fit <- mHealthDose(df.corr[[1]], id="ID", day="DAY", slot="SLOT", p, 
+fit <- mHealthDose(dfs[[1]], id="ID", day="DAY", slot="SLOT", p,
                    dose=dose, y="Y", trt="A",
-                   baseline=c("H1", "H2"), timevar=c("S1", "S2"), 
+                   baseline=c("H1", "H2"), timevar=c("S1", "S2"),
                    b.prime=c("H1", "H2"), t.prime=c("S1", "S2"),
-                   se = TRUE, boot = m, cores = 2, print_progress=FALSE)
+                   boot = m, cores = 2, print_progress=FALSE)
+```
+Here, `fit` contains the estimated treatment effect and interaction for the first simulated dataset. It uses `m` bootstrapped samples and `cores` number of cores to run the bootstrap in parallel. The results can be obtained using the following functions:
+```{r}
 print(fit)
+```
+Coefficients
+```{r}
 coef(fit)
+coef(fit, param=c("A1", "A1:H2"))
+```
+Confidence interval
+```{r}
 confint(fit)
+confint(fit, param=c("A1", "A1:H2"), level=0.9)
+```
+P-value
+```{r}
 pval(fit)
+pval(fit, param=c("A1", "A1:H2"))
+```
+Summary
+```{r}
 summary(fit)
 ```
 
+## Simulation with `mHealthDose()`
+The function `mHealthDose()` can also be used to get simulation results as well as fit a single dataset. To do this, instead of passing a single dataset, `dfs[[1]]`, we just need to pass a list of simulated datasets, `dfs`. The `sim` argument needs to be set to `TRUE` as well. The returned coefficients are the average of all estimated coefficients and standard error is calculated from these estimates. We can see that each of the three estimates converge to $\beta_{10}$, $\beta_{11}$, and $\beta_{12}$ respectively while the working model is misspecified for both baseline and time-varying covariates.
+```{r}
+m=5; n=10; time=5; days=2; eta=c(3,2,1,4); rho=0.5; theta1=c(3,2,1); theta2=0; 
+beta10=1; beta11=0.5; beta12=0.3; p=0.5; dose=1
+dfs <- simMhealth(m, n, time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+mHealthDose(dfs, id="ID", day="DAY", slot="SLOT", p,
+            dose=dose, y="Y", trt="A",
+            baseline=c("H1", "H2"), timevar=c("S1", "S2"),
+            b.prime=c("H1"), t.prime=c("S1"),
+            boot = m, cores = 2, sim = TRUE, print_progress=FALSE)
+```
+
+
+## Fit multiple doses
+As we see from $E[Y(dose=d)-Y(dose=0)\mid S] = S^{\top}\beta$, we need to fit separate models for each dose of interest. Using `mHealthDoses()` function, we can fit multiple doses at once. The function call is similar to `mHealthDose` except that `dose` is a vector of doses of interest. This function returns an object of class `mHealthDoses` which has its own `summary()` function. 
 ```{r setup}
-fits <- mHealthDoses(df.corr[[1]], id="ID", day="DAY", slot="SLOT", p, 
-                   doses=c(1,2,3,4,5), y="Y", trt="A",
-                   baseline=c("H1", "H2"), timevar=c("S1", "S2"), 
-                   b.prime=c("H1", "H2"), t.prime=c("S1", "S2"),
-                   se = TRUE, boot = m, cores = 2, print_progress=FALSE)
-sum <- summary(fits)
-varlevels <- rbind(H1 = c("Male", "Female"), 
-                     S1 = c("Student", "Non-student"), 
-                     H2 = c("Mean Age", "Mean Age+1"), 
-                     S2 = c("Physical Low", "Physical High"))
-colnames(varlevels) <- c("Main Effect", "Interaction Effect")
-plot(sum, varlevels)
+m=5; n=300; time=5; days=10; eta=c(3,2,1,4); rho=0.5; theta1=c(3,2,1); theta2=0; 
+beta10=5; beta11=c(3,2); beta12=c(2,1); p=0.5; dose=1
+dfs <- simMhealth(m, n, time, days, eta, rho, theta1, theta2, beta10, beta11, beta12, p)
+fits <- mHealthDoses(dfs, id="ID", day="DAY", slot="SLOT", p,
+                     doses=c(1,2,3,4,5), y="Y", trt="A",
+                     baseline=c("H1", "H2"), timevar=c("S1", "S2"),
+                     b.prime=c("H1", "H2"), t.prime=c("S1", "S2"),
+                     boot = m, cores = 2, sim = TRUE)
 summary(fits)
 ```
+
+## Plotting the results
+These results are hard to interpret. We can plot these results easily using `plot()`.
+```{r, fig.width=7, fig.height=5, fig.align='center'}
+sum <- summary(fits)
+varlevels <- rbind(H1 = c("Male", "Female"), 
+                   S1 = c("Student", "Non-student"), 
+                   H2 = c("Mean Age", "Mean Age+1"), 
+                   S2 = c("Physical Low", "Physical High"))
+colnames(varlevels) <- c("Main Effect", "Interaction Effect")
+p <- plot(sum, varlevels)
+```
+
+If the user would like to look at the plots individually, this can be achieved as well.
+```{r, fig.width=5, fig.height=3, fig.align='center'}
+p[["H1"]]
+```
+
