--- a/misc/7050_presentation.Rmd
+++ b/misc/7050_presentation.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Optimal Dose for mHealth Interventions"
 author: "Yongjun Lee"
-format: revealjs
-editor: visual
+output: html_document
 ---
 
 ```{r knit-setup, include = FALSE}
@@ -209,10 +208,9 @@ df.gee |>
 ## Participant Demographics
 
 ```{r demog, results='asis'}
-setwd("~/Library/CloudStorage/GoogleDrive-yongjun.lee5@gmail.com/My Drive/1. UCI/2024-1 Winter/Tianchen_excursion/HeartStepsV1")
 library(gtsummary)
 library(gt)
-tt1 <- users.clean |>
+users.clean |>
   select(totaldays,
          age,
          isMale,
@@ -225,10 +223,8 @@ tt1 <- users.clean |>
   ) |>
   tbl_summary() |>
   bold_labels() |> 
-  as_gt()
-cat('<div style="max-height:200; overflow-y:auto;">')
-tt1
-cat('</div>')
+  as_gt() |> 
+  gt::gtsave(filename = "HeartStep Table1.docx")
 ```
 
 # Analysis
@@ -236,24 +232,24 @@ cat('</div>')
 ## GEE Models
 
 $$
-\tiny
+
 E\left[Y_{daily\ step}\right]=\beta_1I\left(dose=1\right)+\beta_2I\left(dose=2\right)+\beta_3I\left(dose=3\right)\\
-\tiny
+\small
 +\beta_4I\left(dose=4\right)+\beta_5I\left(dose=5\right)\\
-\tiny
+\small
 +\beta_6Age+\beta_7Gender+\beta_8Student+\beta_9Physical\;Activity
 $$
 
 $$
-\tiny
+\small
 E\left[Y_{daily\ step}\right]=\beta_1I\left(dose=1\right)+\beta_2I\left(dose=2\right)+\beta_3I\left(dose=3\right)\\
-\tiny
+\small
 +\beta_4I\left(dose=4\right)+\beta_5I\left(dose=5\right)\\
-\tiny
+\small
 +\beta_6I\left(dose=1\right)Age+\beta_7I\left(dose=2\right)Age+\beta_8I\left(dose=3\right)Age\\
-\tiny
+\small
 +\beta_9I\left(dose=4\right)Age+\beta_{10}I\left(dose=5\right)Age\\
-\tiny
+\small
 +\beta_{11}Age+\beta_{12}Gender+\beta_{13}Student+\beta_{14}Physical\;Activity
 $$
 
@@ -265,8 +261,8 @@ gee.unadj <- gee(steps ~ dose1 + dose2 + dose3 + dose4 + dose5, data = df.gee, f
                corstr = "exchangeable")
 # gee.unadj.unstr <- gee(steps ~ dose, data = df.gee, family = "gaussian", id = id,
 #                corstr = "unstructured")
-summ <- round(summary(gee.unadj)$coefficients, 2)
-rslts.gee.unadj <- cbind(summ[,1], summ[,2], summ[,1]-1.96*summ[,4], summ[,1]+1.96*summ[,4])
+summ <- summary(gee.unadj)$coefficients
+rslts.gee.unadj <- round(cbind(summ[,1], summ[,2], summ[,1]-1.96*summ[,4], summ[,1]+1.96*summ[,4]),2)
 #summary(gee.unadj.unstr)
 
 # adjusted
@@ -283,33 +279,76 @@ gee.adj <- gee(steps ~ dose1 + dose2 + dose3 + dose4 + dose5 + age + isMale + is
                corstr = "exchangeable")
 # summary(gee.adj)$coefficients
 
-summ.adj <- round(summary(gee.adj)$coefficients, 2)
+summ.adj <- summary(gee.adj)$coefficients
 rslts.gee.adj <- cbind(summ.adj[,1], summ.adj[,2], summ.adj[,1]-1.96*summ.adj[,4], summ.adj[,1]+1.96*summ.adj[,4])
+rslts.gee.adj <- round(rslts.gee.adj, 2)
 
 rslts.gee.adj1 <- rbind(rslts.gee.adj[1:7,], rep("", 4), rep("(ref)", 4), 
                        rslts.gee.adj[8,], rep("", 4), rep("(ref)", 4),
                        rslts.gee.adj[9,], rep("", 4), rep("(ref)", 4),
                        rslts.gee.adj[10:11,]
                        )
-rslts.gee <- rbind(rslts.gee.unadj, rslts.gee.adj1)
-rslts.gee
+rslts.gee1 <- rbind(rslts.gee.unadj, rslts.gee.adj1)
+rslts.gee1
 summ.adj
+```
+
+```{r}
+# Plot aim 1
+rslts.gee.unadj
+rslts.gee.adj[1:6,]
+
+ylim <- c(min(min(rslts.gee.adj[2:6,]), min(rslts.gee.unadj[2:6,])),
+max(max(rslts.gee.adj[2:6,]), max(rslts.gee.unadj[2:6,])))
+
+{
+plot(x=(1:5)-0.1, y=rslts.gee.unadj[2:6,1], pch=19, col="brown", ylim = ylim, xlab="Notifications received in a day", ylab = "Change in daily step count", xlim = c(0.8,5.2))
+points(1:5-0.1, rslts.gee.unadj[2:6,1], pch=19, col="brown")
+points(1:5-0.1, rslts.gee.unadj[2:6,3], pch="-", col="brown")
+points(1:5-0.1, rslts.gee.unadj[2:6,4], pch="-", col="brown")
+for(i in 1:5){
+    lines(c(i-0.1,i-0.1), c(rslts.gee.unadj[i+1,3],
+                                    rslts.gee.unadj[i+1,4]), col='brown')
+  }
+points(1:5+0.1, rslts.gee.unadj[2:6,1], pch=19, col="orange")
+points(1:5+0.1, rslts.gee.unadj[2:6,3], pch="-", col="orange")
+points(1:5+0.1, rslts.gee.unadj[2:6,4], pch="-", col="orange")
+for(i in 1:5){
+    lines(c(i+0.1,i+0.1), c(rslts.gee.unadj[i+1,3],
+                            rslts.gee.unadj[i+1,4]), col='orange')
+}
+abline(h=0)
+legend("topleft", legend=c("Unadjusted", "Adjusted"),
+       col=c("brown", "orange"), pch=19, cex=0.8, text.font=4)
+}
+
+
+
 ```
 
 ```{r gee aim1 p}
 
-rslts.gee1 <- cbind(c("Unadjusted", rep("", 5), "Adjusted", rep("", 16)),
+rslts.gee2 <- cbind(c("Unadjusted", rep("", 5), "Adjusted", rep("", 16)),
                     c("Intercept", "Dose 1", "Dose 2", "Dose 3", "Dose 4", "Dose 5",
                          "Intercept", "Dose 1", "Dose 2", "Dose 3", "Dose 4", "Dose 5",
-                         "Age", "Sex", "   Male", "   Female", "Occupation", "   Student", "   Not Student", "Physical Activity", "   Low", "   Moderate", "   High"), rslts.gee)
-colnames(rslts.gee1) <- c("Model", "Variable", "Estimate", "SE", "Lower CI", "Upper CI")
+                         "Age", "Sex", "   Male", "   Female", "Occupation", "   Student", "   Not Student", "Physical Activity", "   Low", "   Moderate", "   High"), rslts.gee1)
+colnames(rslts.gee2) <- c("Model", "Variable", "Estimate", "SE", "Lower CI", "Upper CI")
 library(kableExtra)
-rslts.gee1 %>%
-  kable(format = "markdown", row.names = FALSE, escape = TRUE) %>%
-  kable_styling(full_width = FALSE, font_size=15) %>%
-  column_spec(1, bold = TRUE) %>% # Bold the first column
-  row_spec(0, bold = TRUE)
+kable(rslts.gee2)
+# rslts.gee1 %>%
+#   kable(format = "markdown", row.names = FALSE, escape = TRUE) %>%
+#   kable_styling(full_width = FALSE, font_size=15) %>%
+#   column_spec(1, bold = TRUE) %>% # Bold the first column
+#   row_spec(0, bold = TRUE) %>% 
+#   as_gt() |> 
+#   gt::gtsave(filename = "Aim 1 model coef.docx")
+
+# library(flextable)
+# ft1<- flextable(as.data.frame(rslts.gee1) )
+# save_as_docx(ft1, path = "Aim1 coef.docx")
 ```
+
+## GEE - Aim 2
 
 ```{r gee aim2, include=FALSE}
 # gee.unadj.age <- geeglm(steps ~ dose1 + dose2 + dose3 + dose4 + dose5 + age + dose1:age + dose2:age + dose3:age + dose4:age + dose5:age, data = df.gee, family = "gaussian", id = id,
@@ -324,12 +363,14 @@ gee.unadj.age <- gee(steps ~ dose1 + dose2 + dose3 + dose4 + dose5 + age + dose1
 gee.unadj.stu <- gee(steps ~ dose1 + dose2 + dose3 + dose4 + dose5 + isStudent + dose1:isStudent + dose2:isStudent + dose3:isStudent + dose4:isStudent + dose5:isStudent, data = df.gee, family = "gaussian", id = id,
                corstr = "exchangeable")
 
-summ.adj.age <- round(summary(gee.unadj.age)$coefficients, 2)
-rslts.gee.inter.age <- cbind(summ.adj.age[,1], summ.adj.age[,2], summ.adj.age[,1]-1.96*summ.adj.age[,4], summ.adj.age[,1]+1.96*summ.adj.age[,4])
+summ.adj.age <- summary(gee.unadj.age)$coefficients
+rslts.gee.inter.age <- round(cbind(summ.adj.age[,1], summ.adj.age[,2], summ.adj.age[,1]-1.96*summ.adj.age[,4], summ.adj.age[,1]+1.96*summ.adj.age[,4]), 2)
 
-summ.adj.stu <- round(summary(gee.unadj.stu)$coefficients, 2)
-rslts.gee.inter.stu <- cbind(summ.adj.stu[,1], summ.adj.stu[,2], summ.adj.stu[,1]-1.96*summ.adj.stu[,4], summ.adj.stu[,1]+1.96*summ.adj.stu[,4])
+summ.adj.stu <- summary(gee.unadj.stu)$coefficients
+rslts.gee.inter.stu <- round(cbind(summ.adj.stu[,1], summ.adj.stu[,2], summ.adj.stu[,1]-1.96*summ.adj.stu[,4], summ.adj.stu[,1]+1.96*summ.adj.stu[,4]), 2)
 ```
+
+
 
 ## GEE - Aim 2 - Age
 
@@ -341,11 +382,43 @@ rslts.gee.inter.age1 <- cbind(c("Intercept",
                             "Dose 4:Age", "Dose 5:Age"), 
                           rslts.gee.inter.age)
 colnames(rslts.gee.inter.age1) <- c("Variable", "Estimate", "SE", "Lower CI", "Upper CI")
-rslts.gee.inter.age1 %>%
-  kable(format = "markdown", row.names = FALSE, escape = TRUE) %>%
-  kable_styling(full_width = FALSE, font_size=17) %>%
-  column_spec(1, bold = TRUE) %>% # Bold the first column
-  row_spec(0, bold = TRUE)
+# rslts.gee.inter.age1 %>%
+#   kable(format = "markdown", row.names = FALSE, escape = TRUE) %>%
+#   kable_styling(full_width = FALSE, font_size=17) %>%
+#   column_spec(1, bold = TRUE) %>% # Bold the first column
+#   row_spec(0, bold = TRUE)
+# ft1<- flextable(as.data.frame(rslts.gee.inter.age1) )
+# save_as_docx(ft1, path = "Aim2 age coef.docx")
+kable(rslts.gee.inter.age1)
+```
+```{r}
+#rslts.gee.inter.age
+meanage <- rslts.gee.inter.age[1:6,]
+ageplus <- rslts.gee.inter.age[1:6,] + rslts.gee.inter.age[7:12,]
+ylim <- c(min(min(meanage[2:6,]), min(ageplus[2:6,])),
+max(max(meanage[2:6,]), max(ageplus[2:6,])))
+
+{
+plot(x=(1:5)-0.05, y=meanage[2:6,1], pch=19, col="brown", ylim = ylim, xlab="Notifications received in a day", ylab = "Change in daily step count", xlim = c(0.8,5.2))
+points(1:5-0.05, meanage[2:6,1], pch=19, col="brown")
+points(1:5-0.05, meanage[2:6,3], pch="-", col="brown")
+points(1:5-0.05, meanage[2:6,4], pch="-", col="brown")
+for(i in 1:5){
+    lines(c(i-0.05,i-0.05), c(meanage[i+1,3],
+                                    meanage[i+1,4]), col='brown')
+  }
+points(1:5+0.05, ageplus[2:6,1], pch=19, col="orange")
+points(1:5+0.05, ageplus[2:6,3], pch="-", col="orange")
+points(1:5+0.05, ageplus[2:6,4], pch="-", col="orange")
+for(i in 1:5){
+    lines(c(i+0.05,i+0.05), c(ageplus[i+1,3],
+                            ageplus[i+1,4]), col='orange')
+}
+abline(h=0)
+legend("topleft", legend=c("Mean Age", "Mean Age + 10"),
+       col=c("brown", "orange"), pch=19, cex=0.8, text.font=4)
+}
+
 ```
 
 ## GEE - Aim 2 - Student Status
@@ -358,23 +431,56 @@ rslts.gee.inter.stu1 <- cbind(c("Intercept",
                             "Dose 4:Student", "Dose 5:Student"),
                           rslts.gee.inter.stu)
 colnames(rslts.gee.inter.stu1) <- c("Variable", "Estimate", "SE", "Lower CI", "Upper CI")
-rslts.gee.inter.stu1 %>%
-  kable(format = "markdown", row.names = FALSE, escape = TRUE) %>%
-  kable_styling(full_width = FALSE, font_size=17) %>%
-  column_spec(1, bold = TRUE) %>% # Bold the first column
-  row_spec(0, bold = TRUE)
+# rslts.gee.inter.stu1 %>%
+#   kable(format = "markdown", row.names = FALSE, escape = TRUE) %>%
+#   kable_styling(full_width = FALSE, font_size=17) %>%
+#   column_spec(1, bold = TRUE) %>% # Bold the first column
+#   row_spec(0, bold = TRUE)
+# ft1<- flextable(as.data.frame(rslts.gee.inter.stu1) )
+# save_as_docx(ft1, path = "Aim2 stu coef.docx")
+kable(rslts.gee.inter.stu1)
+```
+
+```{r}
+#rslts.gee.inter.stu
+meanage <- rslts.gee.inter.stu[1:6,]
+ageplus <- rslts.gee.inter.stu[1:6,]+ rslts.gee.inter.stu[7:12,]
+ylim <- c(min(min(meanage[2:6,]), min(ageplus[2:6,])),
+max(max(meanage[2:6,]), max(ageplus[2:6,])))
+
+{
+plot(x=(1:5)-0.05, y=meanage[2:6,1], pch=19, col="brown", ylim = ylim, xlab="Notifications received in a day", ylab = "Change in daily step count", xlim = c(0.8,5.2))
+points(1:5-0.05, meanage[2:6,1], pch=19, col="brown")
+points(1:5-0.05, meanage[2:6,3], pch="-", col="brown")
+points(1:5-0.05, meanage[2:6,4], pch="-", col="brown")
+for(i in 1:5){
+    lines(c(i-0.05,i-0.05), c(meanage[i+1,3],
+                                    meanage[i+1,4]), col='brown')
+  }
+points(1:5+0.05, ageplus[2:6,1], pch=19, col="orange")
+points(1:5+0.05, ageplus[2:6,3], pch="-", col="orange")
+points(1:5+0.05, ageplus[2:6,4], pch="-", col="orange")
+for(i in 1:5){
+    lines(c(i+0.05,i+0.05), c(ageplus[i+1,3],
+                            ageplus[i+1,4]), col='orange')
+}
+abline(h=0)
+legend("topleft", legend=c("Student", "Non Student"),
+       col=c("brown", "orange"), pch=19, cex=0.8, text.font=4)
+}
 ```
 
 ## CEE Analysis
 
--   Estimand $$
+-   Estimand 
+$$
     E[Y(dose=d)-Y(dose=0)\mid S] = S^{\top}\beta
-    $$
+$$
 
 -   Estimating Equation
 
 $$
-\tiny
+\small
 \tilde{u}=\sum_{i=1}^n\sum_{t=1}^{T}\sum_{k=1}^{K} \frac{1}{{k \choose d}} \sum_{\bar{a}_{k}\in D}
 \left(
 \frac{I(\bar{A}_{t,k,i}=\bar{a}_{k})}{P(\bar{A}_{t,k,i}=\bar{a}_{t,k})} 
@@ -419,46 +525,6 @@ $$
 ## Simulation Study
 
 $$
-Y_{t+1} = \eta H + \theta_1 S_t + \theta_2 A_{t-1} + (\beta_{10} + \beta_{11}H' + \beta_{12}S_t')A_t +\epsilon
-$$
-
-$$
-\tiny
-\tilde{u}=\sum_{i=1}^n\sum_{t=1}^{T}\sum_{k=1}^{K} \frac{1}{{k \choose d}} \sum_{\bar{a}_{k}\in D}
-\left(
-\frac{I(\bar{A}_{t,k,i}=\bar{a}_{k})}{P(\bar{A}_{t,k,i}=\bar{a}_{t,k})} 
-\left( Y_{t,k,i}-m_{1,t,k} \right) -
-\frac{I(\bar{A}_{t,k,t}=\bar{0}_{k})}{P(\bar{A}_{t,k,i}=\bar{0}_{k})} 
-\left( Y_{t,k}-m_{0,t,k} \right) 
-+ m_{1,t,k} - m_{0,t,k}
-- \frac{1}{K} S^{\top}\beta
-\right)
-\nu(S) 
-$$
-
-## Simulation Study
-
-$$
-Y_{t+1} = \eta H + \theta_1 S_t + \theta_2 A_{t-1} + (\beta_{10} + \beta_{11}H' + \beta_{12}S_t')A_t +\epsilon
-$$
-
-$$
-\tiny
-\tilde{u}=\sum_{i=1}^n\sum_{t=1}^{T}\sum_{k=1}^{K} \frac{1}{{k \choose d}} \sum_{\bar{a}_{k}\in D}
-\left(
-\frac{I(\bar{A}_{t,k,i}=\bar{a}_{k})}{P(\bar{A}_{t,k,i}=\bar{a}_{t,k})} 
-\left( Y_{t,k,i}-m_{1,t,k} \right) -
-\frac{I(\bar{A}_{t,k,t}=\bar{0}_{k})}{P(\bar{A}_{t,k,i}=\bar{0}_{k})} 
-\left( Y_{t,k}-m_{0,t,k} \right) 
-+ m_{1,t,k} - m_{0,t,k}
-- \frac{1}{K} S^{\top}\beta
-\right)
-\nu(S) 
-$$
-
-## Simulation Study
-
-$$
 \beta_{10} = 5,\; \beta_{11} = 3,2,\; \beta_{12} = 2,1,\; p = 0.5
 $$
 
@@ -478,7 +544,6 @@ summary(fits)
 ```{r}
 kable(summary(fits)) |>
   kable_styling(full_width = FALSE, font_size=15)
-  
 ```
 
 ## Simulation Study
